# spdlog-clion-test

./: CMakeLists.txt  README.md  main.cpp
openssl/: CMakeLists.txt
openssl/utils/include/: AES2.h  Padding2.h  spd_aes.h
openssl/utils/src/: AES.cpp  AES2.cpp  Padding.cpp  Padding2.cpp  spd_aes.cpp
protobuf/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets-release.cmake
protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
protos/: room_message.proto
protos/generate/: room_message.pb.cc  room_message.pb.h  search_request.pb.cc  search_request.pb.h
spdlog/: CMakeLists.txt
spdlog/include/spdlog/: ams_spdlog.h
spdlog/include/spdlog/sinks/: rotating_file_sink-inl.h
spdlog/src/: ams_spdlog.cpp
zorro/: CMakeLists.txt
zorro/encrypt/: xor.cc  xor.h
